--- a/forget_password.html
+++ b/forget_password.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="BusinessIQ Africa" />
-        <title>Register - BusinessIQ Africa</title>
+        <title>Log in - BusinessIQ Africa</title>
         <script>
             /* You can add more configuration options to webfontloader by previously defining the WebFontConfig with your options */
             if (typeof WebFontConfig === "undefined") {
@@ -49,7 +49,7 @@
         <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,500,600,700|Source+Sans+Pro:300, 400,500,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+        <link rel="stylesheet" href="css/stellarnav.min.css" />
     </head>
     <body>
         <div id="fb-root"></div>
@@ -58,7 +58,7 @@
             <header class="">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-lg-5 offset-lg-1 col-sm-4 col-7">
+                        <div class="col-lg-4 offset-lg-1 col-sm-4 col-7">
                             <div class="logo">
                                 <a href="index.html" class="link"> <img src="img/logo-v1.png" alt="" class="img-fluid"> </a>
                             </div>
@@ -73,79 +73,34 @@
 
                 <div class="col-lg-6 h-100 my-3">
 
-                    <form class="px-md-5" id="sign_in_wrapper" action="subscription.html" method="get">
+                    <form class="px-md-5" id="sign_in_wrapper" action="index.html" method="get">
 
                         <div class="form-group row">
-                            <div class="col-sm-10 offset-lg-1">
+                            <div class="col-sm-10 offset-lg-2">
 
-                                <h4 class="text-center">Create your account</h4>
-
-                                <div class="fb-login-button" data-width="200" data-size="large" data-button-type="continue_with" data-auto-logout-link="false" data-use-continue-as="true"></div>
-
-                                <a class="btn btn-block text-left font-weight-bold px-0 py-0" style="background-color: #4285F4; color: #fff;"><img src="img/btn_google_dark_normal_ios.svg" class="img-fluid" /> Sign up with Google</a>
-
-                                <p class="text-center small my-3">Or use your email</p>
+                                <h4 class="text-center">Fill in your email address</h4>
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <label for="fname" class="col-sm-3 col-form-label">First Name</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="fname" name="fname" placeholder="First Name" autocomplete="given-name">
+                            <label for="email" class="col-sm-2 col-form-label">Email</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email">
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <label for="lname" class="col-sm-3 col-form-label">Surname</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="lname" name="lname" placeholder="Surname" autocomplete="family-name">
+                            <div class="col-sm-10 offset-lg-2 text-left">
+                                <button type="submit" class="btn btn--primary btn-block mt-4 mb-4 btn--shadow">Change Password</button>
                             </div>
                         </div>
-
-                        <div class="form-group row">
-                            <label for="email" class="col-sm-3 col-form-label">Email</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email" autocomplete="email">
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <label for="phone" class="col-sm-3 col-form-label">Phone number</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter your phone number" autocomplete="tel">
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <label for="date_of_birth" class="col-sm-3 col-form-label">Date of birth</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control date" id="date_of_birth" name="date_of_birth">
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <label for="password" class="col-sm-3 col-form-label">Password</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="password" name="password" placeholder="Enter your password" autocomplete="new-password">
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <div class="col-sm-12 text-left">
-                                <button type="submit" class="btn btn--primary btn-block mt-4 mb-4 btn--shadow">Sign Up</button>
-
-                                <p>Already have an account?<a href="login.html" class="mt-3 reset-password--color"> Sign in</a></p>
-                            </div>
-                        </div>
-
-
                     </form>
                 </div>
-
-
-
             </div>
         </div>
+
+
+
 
         <div class="footer-bg">
             <div class="container">
@@ -184,19 +139,11 @@
                 <!-- /.bottom-footer -->
             </div>
         </div>
+
+
     </body>
     <script src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <script src="js/stellarnav.min.js"></script>
     <script src="js/utility.js"></script>
-    <script>
-        $('input[name="date_of_birth"]').daterangepicker({
-            singleDatePicker: true,
-            showDropdowns: true,
-            minYear: 1901,
-            maxYear: parseInt(moment().format('YYYY'),10)
-        });
-    </script>
 
 </html>
